--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,98 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.grid-col-4 {
+  grid-template-columns: 19% 28% 35% 18%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+/* Removing default appearance */
+input[type="range"] {
+  -webkit-appearance: none;
+  width: 100%;
+  margin: 20px 0;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+/* Track styling */
+input[type="range"]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 8px;
+  animate: 0.2s;
+  background: #ddd;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+input[type="range"]:focus::-webkit-slider-runnable-track {
+  background: #ccc;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+input[type="range"]::-moz-range-track {
+  width: 100%;
+  height: 8px;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  animate: 0.2s;
+  background: #ddd;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+input[type="range"]::-ms-track {
+  width: 100%;
+  height: 8px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+
+/* Thumb styling */
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  border: 2px solid white;
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  background: #111827;
+  cursor: pointer;
+  margin-top: -9px; /* You need to specify a margin to make thumb properly aligned */
+  box-shadow: 0 0 2px 0 #555;
+}
+
+input[type="range"]::-moz-range-thumb {
+  border: 2px solid white;
+  height: 25px;
+  width: 25px;
+  border-radius: 50px;
+  background: #111827;
+  cursor: pointer;
+}
+
+input[type="range"]::-ms-thumb {
+  border: 2px solid white;
+  height: 25px;
+  width: 25px;
+  border-radius: 50px;
+  background: #111827;
+  cursor: pointer;
+}
+
+/* Active state */
+input[type="range"]::-webkit-slider-runnable-track:active {
+  background: #ccc;
+}
+
+input[type="range"]::-moz-range-track:active {
+  background: #ccc;
+}
+
+input[type="range"]::-ms-track:active {
+  background: #ccc;
+}
+
+.overflow-y-scroll::-webkit-scrollbar {
+  background-color: transparent;
+  width: 5px;
+  overflow: hidden;
+}
+.overflow-y-scroll::-webkit-scrollbar-thumb {
+  background-color: white;
+  width: 100%;
+  border-radius: 20px;
 }
