--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@
 .grid-col-4 {
   grid-template-columns: 19% 28% 35% 18%;
 }
+.grid-col-3 {
+  grid-template-columns: 19% 63% 18%;
+}
 
 /* Removing default appearance */
 input[type="range"] {
@@ -95,4 +98,79 @@ input[type="range"]::-ms-track:active {
   background-color: white;
   width: 100%;
   border-radius: 20px;
+}
+
+.loader {
+  background-color: white;
+  animation: expandLoader 3.6s forwards;
+}
+
+@keyframes expandLoader {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 1050px) {
+  .grid-col-4 {
+    grid-template-columns: 25% 35% 40%;
+  }
+  .lg-l\:hidden {
+    display: none;
+  }
+  .logo {
+    width: 24rem;
+    height: 24rem;
+  }
+}
+@media only screen and (max-width: 940px) {
+  .logo {
+    width: 22rem;
+    height: 22rem;
+  }
+}
+@media only screen and (max-width: 900px) {
+  .grid-col-4 {
+    grid-template-columns: 50% 50%;
+    padding-left: 20px;
+    padding-right: 20px;
+    > :nth-child(1) {
+      display: none;
+    }
+  }
+  .sidebar {
+    position: fixed;
+    display: none;
+  }
+  .border-r-2{
+    border-right: none;
+  }
+  .border-r{
+    border-right: none;
+  }
+}
+@media only screen and (max-width: 680px) {
+  .grid-col-4 {
+    grid-template-columns: 100%;
+    > :nth-child(2) {
+      position: fixed;
+      width: 22rem;
+      background-color: #111827;
+      left: -100%;
+      transition: all 0.5s;
+      z-index: 99;
+    }
+  }
+  .menu-btn {
+    display: flex;
+  }
+  .active.editor {
+    left: 0;
+  }
+  .trans {
+    transition: all 0.5s;
+  }
 }
